# Ising_Cristi_omp

./: CMakeLists.txt  main  main.cpp
